--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "bootstrap": "^4.5.2",
+    "framer-motion": "^6.3.16",
+    "gsap": "^3.10.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet-async": "^1.3.0",
+    "react-intersection-observer": "^9.3.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
-    "reactstrap": "^9.1.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
@@ -52,7 +52,6 @@
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
     "react-error-overlay": "6.0.9"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
